// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dealCards: player 0 1`] = `
Array [
  Object {
    "rank": "ten",
    "suit": "clubs",
  },
  Object {
    "rank": "ace",
    "suit": "clubs",
  },
  Object {
    "rank": "king",
    "suit": "clubs",
  },
  Object {
    "rank": "jack",
    "suit": "diamonds",
  },
  Object {
    "rank": "nine",
    "suit": "diamonds",
  },
  Object {
    "rank": "jack",
    "suit": "spades",
  },
  Object {
    "rank": "nine",
    "suit": "spades",
  },
  Object {
    "rank": "eight",
    "suit": "spades",
  },
]
`;

exports[`dealCards: player 1 1`] = `
Array [
  Object {
    "rank": "queen",
    "suit": "clubs",
  },
  Object {
    "rank": "jack",
    "suit": "clubs",
  },
  Object {
    "rank": "nine",
    "suit": "clubs",
  },
  Object {
    "rank": "eight",
    "suit": "diamonds",
  },
  Object {
    "rank": "seven",
    "suit": "diamonds",
  },
  Object {
    "rank": "seven",
    "suit": "spades",
  },
  Object {
    "rank": "ten",
    "suit": "hearts",
  },
  Object {
    "rank": "ace",
    "suit": "hearts",
  },
]
`;

exports[`dealCards: player 2 1`] = `
Array [
  Object {
    "rank": "eight",
    "suit": "clubs",
  },
  Object {
    "rank": "seven",
    "suit": "clubs",
  },
  Object {
    "rank": "ten",
    "suit": "diamonds",
  },
  Object {
    "rank": "ten",
    "suit": "spades",
  },
  Object {
    "rank": "ace",
    "suit": "spades",
  },
  Object {
    "rank": "king",
    "suit": "hearts",
  },
  Object {
    "rank": "queen",
    "suit": "hearts",
  },
  Object {
    "rank": "jack",
    "suit": "hearts",
  },
]
`;

exports[`dealCards: player 3 1`] = `
Array [
  Object {
    "rank": "ace",
    "suit": "diamonds",
  },
  Object {
    "rank": "king",
    "suit": "diamonds",
  },
  Object {
    "rank": "queen",
    "suit": "diamonds",
  },
  Object {
    "rank": "king",
    "suit": "spades",
  },
  Object {
    "rank": "queen",
    "suit": "spades",
  },
  Object {
    "rank": "nine",
    "suit": "hearts",
  },
  Object {
    "rank": "eight",
    "suit": "hearts",
  },
  Object {
    "rank": "seven",
    "suit": "hearts",
  },
]
`;
